Fixed alignment and forced scrolled for details pg

--- a/assets/css/hookem.css
+++ b/assets/css/hookem.css
@@ -368,15 +368,15 @@ h6 {
     letter-spacing: normal;
     text-transform: uppercase;
     visibility: visible;
-  }
+  } 
 
   #header .logo {
     font-size: 28px;
-  }
-  /*#header .logo h2 {
+  } 
+  #header .logo h2 {
             font-size: 8px;
-        }*/
-}
+        }
+} 
 
 .header-inner-pages {
   background: rgba(0, 0, 0, 0.9) !important;
@@ -704,7 +704,26 @@ h6 {
 }
 
 #hero span {
-
+  position: absolute;
+  margin: 0 0 10px 0;
+  font-weight: 400;
+  color: #f4f4f4;
+  left: 14px;
+  right: 0;
+  z-index: 2;
+  letter-spacing: normal;
+  text-transform: uppercase;
+  font-size: 44px;
+  /* background: -webkit-linear-gradient(
+    rgb(128, 6, 155),
+    rgb(248, 173, 60),
+    rgb(60, 214, 248),
+    rgb(60, 214, 248)
+  ); */
+  /* background-clip: content-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+  line-height: 60px;
   visibility: hidden;
 }
 #hero .btn-meet-me {
@@ -768,7 +787,7 @@ section {
 }
 
 .section-title h2 {
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -789,6 +808,7 @@ section {
   font-size: 52px;
   text-transform: uppercase;
   line-height: 0;
+  visibility: hidden;
 }
 
 .section-title p {
@@ -805,6 +825,7 @@ section {
 
   .section-title span {
     font-size: 38px;
+    visibility: hidden;
   }
 }
 
@@ -1352,7 +1373,7 @@ section {
 .breadcrumbs {
   padding: 15px 0;
   background: #efefef;
-  margin-top: 98px;
+  margin-top: 58px;
 }
 
 @media (max-width: 992px) {
